# biodivine-aeon-desktop

./: .eslintignore  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release_build.yml  test_build.yml
fe/: computation-window.html  explorer.html  help-window.html  index.html  model-window.html  style.css  tree_explorer.html
fe/manual/book/: 404.html  introduction.html  print.html
fe/script/: Computation.js  ComputationResultsEndpoints.js  ComputationWindowEvent.js  ComputeEngine.js  ComputeEngineEndpoints.js  CytoscapeEditor.js  CytoscapeTreeEditor.js  Events.js  LiveModel.js  Menu.js  MessageDialog.js  ModelEditor.js  ModelEndpoints.js  Results.js  Session.js  UI.js  Windows.js  computationMain.js  const.js  explorerMain.js  main.js  treeExplorerMain.js
fe/script/common/: Dialog.js  Model.js  Strings.js  const.js
fe/script/endpoints/: ComputationEndpoints.js  ComputationResultsEndpoints.js  ModelEndpoints.js  TreeExplorerEndpoints.js  WindowsEndpoints.js
fe/script/events/: ComputationWindowEvent.js  ExplorerWindowEvent.js  MenuEvent.js  ModelWindowEvent.js  TreeExplorerWindowEvent.js  WitnessWindowEvent.js
fe/script/tauriCommands/: ComputationCommands.js  ComputationResultsCommands.js  ModelCommands.js  WindowsCommands.js
frontend/: computation-window.html  explorer.html  help-window.html  index.html  tree-explorer.html  witness-window.html
frontend/manual/book/: build.html  compute_engine.html  foreword.html  index.html  searchindex.js  searchindex.json
frontend/script/: Computation.js  CytoscapeEditor.js  CytoscapeTreeEditor.js  LiveModel.js  Menu.js  ModelEditor.js  Results.js  UI.js  Windows.js  computationMain.js  explorerMain.js  modelMain.js  treeExplorerMain.js
frontend/script/common/: Dialog.js  Examples.js  Model.js  Strings.js
frontend/script/events/: ComputationWindowEvent.js  ExplorerWindowEvent.js  ModelWindowEvent.js  TreeExplorerWindowEvent.js  WitnessWindowEvent.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: builtin.json
src-tauri/src/: _impl_graph_task_context.rs  commands.rs  common.rs  computation.rs  computation_commands.rs  computation_results.rs  computation_results_commands.rs  lib.rs  main.rs  menu.rs  model.rs  model_commands.rs  multi_window.rs  session.rs  tree_explorer_commands.rs  version_command.rs
src-tauri/src/algorithms/: asymptotic_behaviour.rs  asymptotic_behaviour_classifier.rs  asymptotic_behaviour_counter.rs  incremental_classifier.rs  mod.rs
src-tauri/src/algorithms/attractors/: mod.rs
src-tauri/src/algorithms/attractors/itgr/: mod.rs
src-tauri/src/algorithms/scc/: _impl_behaviour.rs  _impl_class.rs  _impl_classifier.rs  _impl_progress_tracker.rs  mod.rs
src-tauri/src/algorithms/scc/algo_interleaved_transition_guided_reduction/: _impl_extended_component_process.rs  _impl_fwd_bwd_process.rs  _impl_reachable_process.rs  _impl_scheduler.rs
src-tauri/src/algorithms/scc/algo_stability_analysis/: _impl_attractor_stability_data.rs  _impl_stability.rs  _impl_stability_vector.rs  _impl_variable_stability.rs
src-tauri/src/algorithms/scc/algo_xie_beerel/: mod.rs
src-tauri/src/bdt/: _attributes_for_network.rs  _impl_bdt.rs  _impl_bdt_dot_export.rs  _impl_bdt_json.rs  _impl_bdt_node.rs  _impl_indexing.rs  mod.rs
src-tauri/src/tauri_commands/: computation_commands.rs  computation_results_commands.rs  mod.rs  model_commands.rs  session_commands.rs  tree_explorer_commands.rs  version_command.rs  window_commands.rs
(+16 files in other folders)
