[package]
name = "biodivine-aeon-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "biodivine-aeon-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-all", "fs-all", "dialog-all"] }
biodivine-lib-param-bn = "0.4.5"
biodivine-lib-bdd = "0.5.1"
rocket = "0.5.0-rc.1"
tokio = "1.18.1"
lazy_static = "1.4"
json = "0.12.1"
regex = "1.5"
futures = "0.3.21"
fixed-map = "0.7.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
