[package]
name = "biodivine-aeon-desktop"
version = "0.1.0"
authors = ["Stefan Sidlovsky <514508@mail.muni.cz>"]
license = "MIT"
repository = "https://github.com/sybila/biodivine-aeon-desktop"
default-run = "biodivine-aeon-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["unstable"] }
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-fs = "2.0.0-beta.0"
urlencoding = "2.1.3"
chrono = "0.4.34"
biodivine-lib-param-bn = "0.5.7"
biodivine-lib-bdd = "0.5.10"
rocket = "0.5.0"
tokio = "1.18.1"
lazy_static = "1.4"
json = "0.12.1"
regex = "1.5"
futures = "0.3.21"
fixed-map = "0.9.2"
url = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
